3D thumbnail no longer stretches or shrinks on wide/short screens. notebook tab transition added.

--- a/css/planetstyle.css
+++ b/css/planetstyle.css
@@ -1,9 +1,12 @@
 /* PLANET PAGE */
 /*             */
 #threeD-thumbnail {
-    z-index: 3;
-    height: 80vh;
+    margin: auto;
+    display: flex;
+    width: auto;
+    max-width: 100%;
     max-height: 800px;
+    z-index: 3;
 }
 
 #threeD-map {
@@ -176,6 +179,9 @@
     right: -140px;
     padding-left: 20px;
     font-weight: bold;
+
+    transition: right 0.25s ease-out, width 0.25s ease-out, padding 0.25s ease-out;
+    /* animates all changes at the same time */
 }
 
 #star-tab {
